parser/src/parser/expressions/snapshots/test__parser::expressions::for_expr::test::parse_empty_expr.snap
---
created: "2019-08-25T20:31:07.680295Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/for_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    NAME@[2; 6)
      IDENT@[2; 6) "main"
    PARAM_LIST@[6; 8)
      L_PAREN@[6; 7) "("
      R_PAREN@[7; 8) ")"
    BLOCK@[8; 20)
      L_CURLY@[8; 9) "{"
      FOR_EXPR@[9; 19)
        FOR_KW@[9; 12) "for"
        L_PAREN@[12; 13) "("
        SEMI@[13; 14) ";"
        SEMI@[14; 15) ";"
        SEMI@[15; 16) ";"
        R_PAREN@[16; 17) ")"
        BLOCK@[17; 19)
          L_CURLY@[17; 18) "{"
          R_CURLY@[18; 19) "}"
      R_CURLY@[19; 20) "}"

