parser/src/parser/expressions/snapshots/test__parser::expressions::for_expr::test::parse_empty_for_expr.snap
---
created: "2020-05-02T10:11:44.254103Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/for_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 23)
      BLOCK@[10; 23)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 22)
          FOR_EXPR@[11; 22)
            FOR_KW@[11; 14) "for"
            L_PAREN@[14; 15) "("
            SEMI@[15; 16) ";"
            SEMI@[16; 17) ";"
            SEMI@[17; 18) ";"
            R_PAREN@[18; 19) ")"
            WHITESPACE@[19; 20) " "
            BLOCK_EXPR@[20; 22)
              BLOCK@[20; 22)
                L_CURLY@[20; 21) "{"
                R_CURLY@[21; 22) "}"
        R_CURLY@[22; 23) "}"

