parser/src/parser/expressions/snapshots/test__parser::expressions::for_expr::test::parse_for_no_incr.snap
---
created: "2020-03-03T19:30:54.465394Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/for_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 37)
  FN_DEF@[0; 37)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 10)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
      WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 37)
      BLOCK@[10; 37)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 35)
          FOR_EXPR@[12; 35)
            FOR_KW@[12; 15) "for"
            WHITESPACE@[15; 16) " "
            L_PAREN@[16; 17) "("
            LET_STMT@[17; 25)
              LET_KW@[17; 20) "let"
              WHITESPACE@[20; 21) " "
              BIND_PAT@[21; 22)
                NAME@[21; 22)
                  IDENT@[21; 22) "x"
              EQ@[22; 23) "="
              LITERAL@[23; 25)
                INT_NUMBER@[23; 25) "10"
            SEMI@[25; 26) ";"
            BIN_EXPR@[26; 30)
              IDENT_EXPR@[26; 27)
                NAME@[26; 27)
                  IDENT@[26; 27) "x"
              L_ANGLE@[27; 28) "<"
              LITERAL@[28; 30)
                INT_NUMBER@[28; 30) "10"
            SEMI@[30; 31) ";"
            SEMI@[31; 32) ";"
            R_PAREN@[32; 33) ")"
            BLOCK_EXPR@[33; 35)
              BLOCK@[33; 35)
                L_CURLY@[33; 34) "{"
                R_CURLY@[34; 35) "}"
        SEMI@[35; 36) ";"
        R_CURLY@[36; 37) "}"

