parser/src/parser/expressions/snapshots/test__parser::expressions::if_expr::test::parse_chained_if_and_else.snap
---
created: "2020-03-03T19:30:54.507800Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/if_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 65)
  FN_DEF@[0; 65)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 10)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
      WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 65)
      BLOCK@[10; 65)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 64)
          IF_EXPR@[12; 64)
            IF_KW@[12; 14) "if"
            WHITESPACE@[14; 15) " "
            CONDITION@[15; 20)
              LITERAL@[15; 20)
                TRUE_KW@[15; 19) "true"
                WHITESPACE@[19; 20) " "
            BLOCK_EXPR@[20; 23)
              BLOCK@[20; 23)
                L_CURLY@[20; 21) "{"
                R_CURLY@[21; 22) "}"
                WHITESPACE@[22; 23) " "
            ELSE_KW@[23; 27) "else"
            WHITESPACE@[27; 28) " "
            IF_EXPR@[28; 64)
              IF_KW@[28; 30) "if"
              WHITESPACE@[30; 31) " "
              CONDITION@[31; 37)
                LITERAL@[31; 37)
                  FALSE_KW@[31; 36) "false"
                  WHITESPACE@[36; 37) " "
              BLOCK_EXPR@[37; 40)
                BLOCK@[37; 40)
                  L_CURLY@[37; 38) "{"
                  R_CURLY@[38; 39) "}"
                  WHITESPACE@[39; 40) " "
              ELSE_KW@[40; 44) "else"
              WHITESPACE@[44; 45) " "
              IF_EXPR@[45; 64)
                IF_KW@[45; 47) "if"
                WHITESPACE@[47; 48) " "
                CONDITION@[48; 53)
                  LITERAL@[48; 53)
                    TRUE_KW@[48; 52) "true"
                    WHITESPACE@[52; 53) " "
                BLOCK_EXPR@[53; 56)
                  BLOCK@[53; 56)
                    L_CURLY@[53; 54) "{"
                    R_CURLY@[54; 55) "}"
                    WHITESPACE@[55; 56) " "
                ELSE_KW@[56; 60) "else"
                WHITESPACE@[60; 61) " "
                BLOCK_EXPR@[61; 64)
                  BLOCK@[61; 64)
                    L_CURLY@[61; 62) "{"
                    R_CURLY@[62; 63) "}"
                    WHITESPACE@[63; 64) " "
        R_CURLY@[64; 65) "}"

